--- a/static/css/base.scss
+++ b/static/css/base.scss
@@ -111,11 +111,19 @@ body {
         transition: all 0.3s;
         z-index: 98;
 
-        @media screen and (max-width: 768px) {
+        @media screen and (max-width: 1100px) {
             width: 90%;
             left: -90%;
             font-size: 1.5rem;
         }
+
+        @media screen and (max-width: 1200px) and (min-width: 768px){
+            width: 30%;
+            left: -90%;
+            font-size: 1.5rem;
+        }
+
+
 
         &--open {
             left: 0;
@@ -142,4 +150,77 @@ body {
             color: #fff;
         }
     }
+}
+
+// notification
+
+#message-box {
+  position: absolute;
+  top: 8%;
+  margin-top: 5%;
+}
+
+.float {
+  // z-index: 1;
+  animation-name: float;
+  -webkit-animation-name: float;
+  animation-duration: 1.5s;
+  -webkit-animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: infinite;
+}
+@-webkit-keyframes float {
+  0% {
+    -webkit-transform: translateY(0%);
+  }
+  50% {
+    -webkit-transform: translateY(8%);
+  }
+  100% {
+    -webkit-transform: translateY(0%);
+  }
+}
+@-moz-keyframes float {
+  0% {
+    transform: translateY(0%);
+  }
+  50% {
+    transform: translateY(8%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+@-webkit-keyframes float {
+  0% {
+    transform: translateY(0%);
+  }
+  50% {
+    transform: translateY(8%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+@-o-keyframes float {
+  0% {
+    transform: translateY(0%);
+  }
+  50% {
+    transform: translateY(8%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+@keyframes float {
+  0% {
+    transform: translateY(0%);
+  }
+  50% {
+    transform: translateY(8%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
 }
