Minor changes to profile functions - my profile button, wrong email passwrod message, login redirect...

--- a/static/css/base.scss
+++ b/static/css/base.scss
@@ -50,8 +50,15 @@ body {
 // body {
 //     background-color: lightcyan;
 // }
+#slider {
+  z-index: 500;
+  
+}
+
+
 .menu {
     $root: &;
+
 
     &__burger {
         $burger: #{$root}__burger;
