--- a/staticfiles/css/base.scss
+++ b/staticfiles/css/base.scss
@@ -50,8 +50,15 @@ body {
 // body {
 //     background-color: lightcyan;
 // }
+#slider {
+  z-index: 500;
+  
+}
+
+
 .menu {
     $root: &;
+
 
     &__burger {
         $burger: #{$root}__burger;
@@ -229,9 +236,6 @@ body {
 
 // Profile Base Page css
 
-body {
-    background: #F5F7FA
-  }
 
   .stat-val {
     font-size: 3em;
@@ -265,5 +269,28 @@ body {
   .container.profile .profile-options .tabs ul li.link a {
     margin-bottom: 20px;
     padding: 20px;
-    background-color: #F1F1F1;
+    // background-color: #F1F1F1;
   }
+
+
+  // Profile Pages css
+  // Home Pages
+
+  #weekly {
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+
+.card {overflow:hidden}
+.card.large {
+height: 600px;
+-webkit-backface-visibility: hidden;
+backface-visibility: initial;
+border-radius: 5px;
+}
+.media-content {
+overflow: hidden;
+}
+.title.no-padding {
+margin-bottom: 0 !important;
+}
